src/objects/SFDC_Performance_Review__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Service_Internal_External__c</fullName>
        <label>Customer Service (Internal &amp; External)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Understands customer needs</fullName>
                </value>
                <value>
                    <fullName>Responds to customer needs</fullName>
                </value>
                <value>
                    <fullName>Gives complete &amp; timely responses</fullName>
                </value>
                <value>
                    <fullName>Exceeds expectations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Notes__c</fullName>
        <label>Customer Service Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Rating__c</fullName>
        <label>Customer Service Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependability_Notes__c</fullName>
        <label>Dependability Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dependability_Rating__c</fullName>
        <label>Dependability Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependability__c</fullName>
        <label>Dependability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attends work regularly</fullName>
                </value>
                <value>
                    <fullName>Plans appropriately for absences</fullName>
                </value>
                <value>
                    <fullName>Embraces positive change</fullName>
                </value>
                <value>
                    <fullName>Adjusts to changing responsibilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Comments__c</fullName>
        <label>Employee Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Review_Notes__c</fullName>
        <label>Employee Review Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>R00N30000001eUQUEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative_Notes__c</fullName>
        <label>Initiative Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initiative_Rating__c</fullName>
        <label>Initiative Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepts new tasks enthusiastically</fullName>
                </value>
                <value>
                    <fullName>Assumes responsibility for tasks</fullName>
                </value>
                <value>
                    <fullName>Works independently when appropriate</fullName>
                </value>
                <value>
                    <fullName>Actively seeks new assignments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Knowledge_Notes__c</fullName>
        <label>Job Knowledge Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Knowledge_Rating__c</fullName>
        <label>Job Knowledge Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Knowledge__c</fullName>
        <label>Job Knowledge</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applies standard procedures</fullName>
                </value>
                <value>
                    <fullName>Maintains technical proficiency</fullName>
                </value>
                <value>
                    <fullName>Serves as a job resource for others</fullName>
                </value>
                <value>
                    <fullName>Documents work processes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Status__c</fullName>
        <label>Manager Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managing Others</fullName>
                </value>
                <value>
                    <fullName>No Subordinates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Review__c</fullName>
        <label>Period Review</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_of_Work_Notes__c</fullName>
        <label>Quality of Work Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quality_of_Work_Rating__c</fullName>
        <label>Quality of Work Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Work__c</fullName>
        <label>Quality of Work</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follows instruction carefully</fullName>
                </value>
                <value>
                    <fullName>Work is thorough and accurate</fullName>
                </value>
                <value>
                    <fullName>Implements process improvements</fullName>
                </value>
                <value>
                    <fullName>Analyzes and dev effective solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_of_Work_Notes__c</fullName>
        <label>Quantity of Work Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Work_Rating__c</fullName>
        <label>Quantity of Work Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_of_Work__c</fullName>
        <label>Quantity of Work</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Produces acceptable work products</fullName>
                </value>
                <value>
                    <fullName>Works quickly and efficiently</fullName>
                </value>
                <value>
                    <fullName>Organizes and prioritizes work</fullName>
                </value>
                <value>
                    <fullName>Performs well under pressure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Overall_Score__c</fullName>
        <label>Review Overall Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Probationary</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervision_Notes__c</fullName>
        <label>Supervision Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervision_Rating__c</fullName>
        <label>Supervision Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervision__c</fullName>
        <label>Supervision</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Manager_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Encourages staff development</fullName>
                </value>
                <value>
                    <fullName>Provides motivation and guidance</fullName>
                </value>
                <value>
                    <fullName>Clearly defines expectations</fullName>
                </value>
                <value>
                    <fullName>Understands and adheres to policy</fullName>
                </value>
                <value>
                    <fullName>Treats problems with sensitivity</fullName>
                </value>
                <value>
                    <fullName>Demonstrates leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamwork_Cooperation_Rating__c</fullName>
        <label>Teamwork/Cooperation Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamwork_and_Cooperation_Notes__c</fullName>
        <label>Teamwork and Cooperation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Teamwork_and_Cooperation__c</fullName>
        <label>Teamwork and Cooperation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Works with others toward success</fullName>
                </value>
                <value>
                    <fullName>Shows concern for others</fullName>
                </value>
                <value>
                    <fullName>Earns respect &amp; confidence of others</fullName>
                </value>
                <value>
                    <fullName>Sets group success as priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Performance Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PER-REV-{00000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>